--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@prisma/client": "^6.7.0",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "framer-motion": "^12.9.4",
@@ -29,6 +31,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
+    "prisma": "^6.7.0",
     "tailwindcss": "^4.1.5",
     "typescript": "^5"
   }
