--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
