--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextimn",
   "version": "0.1.0",
   "private": true,
+   "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,11 +15,14 @@
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
@@ -35,6 +39,7 @@
     "postcss": "^8.5.3",
     "prisma": "^6.7.0",
     "tailwindcss": "^4.1.5",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
