--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nextimn",
   "version": "0.1.0",
   "private": true,
-   "type": "module",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
@@ -30,7 +33,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.17.46",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
