--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "typeRoots": ["./types", "./node_modules/@types"],  // ตรวจสอบให้แน่ใจว่ามีการตั้งค่าอย่างนี้
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -25,7 +26,7 @@
   },
   "include": [
     "next-env.d.ts",
-    "next-auth.d.ts",     // ✅ เพิ่มไฟล์ที่ขยาย type session
+    "types/**/*.d.ts", // ให้รวมไฟล์ types ของคุณ
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
