--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.509.0",
-    "next": "15.3.1",
+    "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
