--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --project tsconfig.seed.json prisma/seed.ts"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.8.0",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
@@ -40,7 +44,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
-    "prisma": "^6.7.0",
+    "prisma": "^6.8.0",
     "tailwindcss": "^4.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
